@@ -2182,7 +2182,7 @@ $1',
 'noimages'              => 'چیزی برای دیدن نیست.',
 'ilsubmit'              => 'جستجو',
 'bydate'                => 'از روی تاریخ',
-'sp-newimages-showfrom' => 'نشان‌دادن تصویرهای جدید از $1 به بعد',
+'sp-newimages-showfrom' => 'نشان‌دادن تصویرهای جدید از $2، $1 به بعد',
 
 # Bad image list
 'bad_image_list' => 'اطلاعات را باید به این شکل وارد کنید:
